--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
-
 name: Build and publish
 
 on:
   push:
     branches:
-      - nodejsSansBDD
+      - main
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: emmamau/nodejsSansBDD
+  IMAGE_NAME: sabrina080802/tp06
 
 jobs:
   build-and-publish:
